--- a/src/DevOpsFeed.Auth/project.json
+++ b/src/DevOpsFeed.Auth/project.json
@@ -6,7 +6,9 @@
     "Microsoft.AspNet.Mvc": "6.0.0-beta4",
     "Microsoft.AspNet.Server.IIS": "1.0.0-beta4",
     "Microsoft.AspNet.Server.WebListener": "1.0.0-beta4",
-    "Microsoft.AspNet.StaticFiles": "1.0.0-beta4"
+    "Microsoft.AspNet.StaticFiles": "1.0.0-beta4",
+    "Thinktecture.IdentityServer3": "1.6.1",
+    "Thinktecture.IdentityModel.Core": "1.4.0"
   },
 
   "commands": {
